kubernetes/_base/miscellaneous/syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
        - name: syncthing
          image: syncthing/syncthing:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8384
              name: web-ui
            - containerPort: 22000
              name: sync-tcp
            - containerPort: 22000
              protocol: UDP
              name: sync-udp
            - containerPort: 21027
              protocol: UDP
              name: discovery
          volumeMounts:
            - name: syncthing-data
              mountPath: /var/syncthing
      volumes:
        - name: syncthing-data
          persistentVolumeClaim:
            claimName: syncthing-data
      restartPolicy: Always
